@@ -1,7 +1,7 @@
 package wcas.freedom1b2830.globalleaks.watchdog;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.TimeUnit;
 
 import wcas.freedom1b2830.globalleaks.module.worker.GlobalLeakModuleWorker;
@@ -10,29 +10,24 @@ import wcas.freedom1b2830.globalleaks.utils.ThreadUtils;
 
 public abstract class NetworkWatchdogWorker extends GlobalLeakModuleWorker {
 
-	protected NetworkWatchdogWorker(final NetworkWatchdog networkWatchdog, final String loggerName) {
-		super(networkWatchdog, loggerName);
+	protected NetworkWatchdogWorker(final NetworkWatchdog networkWatchdog, final String loggerNameInput) {
+		super(networkWatchdog, loggerNameInput);
 		actionThreadPreLoop = new GlobalLeakModuleWorkerAction() {
-			@Override
-			public void exec() throws IOException {
+			public @Override void exec() throws IOException {
 				setName(loggerName);
 			}
 		};
 
-		actionThreadLoop = new GlobalLeakModuleWorkerAction() {
-
-			@Override
-			public void exec() throws IOException {
-				try {
-					final var url = new URL("http://ident.me");
-					try (var is = url.openStream()) {
-						networkWatchdog.networkOk = true;
-					}
-				} catch (final Exception e) {
-					networkWatchdog.networkOk = false;
+		actionThreadLoop = () -> {
+			try {
+				final var url = URI.create("http://ident.me").toURL();
+				try (var is = url.openStream()) {
+					networkWatchdog.networkOk = true;
 				}
-				ThreadUtils.sleep(10, TimeUnit.SECONDS);
+			} catch (final Exception e) {
+				networkWatchdog.networkOk = false;
 			}
+			ThreadUtils.sleep(10, TimeUnit.SECONDS);
 		};
 
 	}
